Enhance CORS configuration with improved origin handling and logging